--- a/install
+++ b/install
@@ -72,6 +72,12 @@ python setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
 # the shared libraries
 export LIBBBG_LIB=$PREFIX/lib/python2.7/dist-packages/libbbg/
 
+# install solpol and solpol2 extensions - requires mathematical libraries linked to NumPy!
+cd libbbg/qm
+f2py -c --link-lapack_opt --link-blas_opt -m make_points  make_points.f
+mv -v $PWD/make_points.so $LIBBBG_LIB/qm
+cd ../..
+
 echo --- INFO ---------------------------------------------------------------------------
 echo
 echo Modify your $HOME/.bashrc script adding the following line:
