Install file improved

--- a/install
+++ b/install
@@ -70,14 +70,14 @@ fi
 python setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
 
 # the shared libraries
-export LIBBBG_LIB=$PREFIX/lib/python2.7/dist-packages/libbbg/
+export LIBBBG_LIB=$PREFIX/lib/python2.7/dist-packages/
 
 # install solpol and solpol2 extensions - requires mathematical libraries linked to NumPy!
 cd libbbg/qm
 f2py -c --link-lapack_opt --link-blas_opt -m make_points  make_points.f
 f2py -c --link-lapack_opt --link-blas_opt -m wfn  wfn.f
-mv -v $PWD/make_points.so $LIBBBG_LIB/qm
-mv -v $PWD/wfn.so $LIBBBG_LIB/qm
+mv -v $PWD/make_points.so $LIBBBG_LIB/libbbg/qm
+mv -v $PWD/wfn.so $LIBBBG_LIB/libbbg/qm
 cd ../..
 
 echo --- INFO ---------------------------------------------------------------------------
