--- a/install
+++ b/install
@@ -67,17 +67,17 @@ then
 fi
 
 # install LIBBBG
-python setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
+python2.7 setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
 
 # the shared libraries
-export LIBBBG_LIB=$PREFIX/lib/python2.7/dist-packages/
+export LIBBBG_LIB=$PREFIX/lib/python2.7/site-packages/
 
 # install solpol and solpol2 extensions - requires mathematical libraries linked to NumPy!
 cd libbbg/qm
-f2py -c --quiet --link-lapack_opt --link-blas_opt -m make_points  make_points.f
-f2py -c --quiet --link-lapack_opt --link-blas_opt -m wfn  wfn.f
-mv -v $PWD/make_points.so $LIBBBG_LIB/libbbg/qm
-mv -v $PWD/wfn.so $LIBBBG_LIB/libbbg/qm
+f2py2.7 -c --quiet --link-lapack_opt --link-blas_opt -m make_points  make_points.f
+f2py2.7 -c --quiet --link-lapack_opt --link-blas_opt -m wfn  wfn.f
+mv -v $PWD/make_points.so $LIBBBG_LIB/libbbg/qm/make_points.so
+mv -v $PWD/wfn.so $LIBBBG_LIB/libbbg/qm/wfn.so
 cd ../..
 
 echo --- INFO ---------------------------------------------------------------------------
