--- a/install
+++ b/install
@@ -13,6 +13,7 @@ OPTIONS:
    -p      prefix (default \usr\local)
    -x      exec_prefix (default \usr\local)
    -v      Verbose
+   -V      Python version (2 or 3; default 3)
 
 NOTES:
    if only prefix chosen, the exec_prefix will be the same as prefix
@@ -23,9 +24,10 @@ EOF
 PREFIX=
 EXEC_PREFIX=
 VERBOSE=
+PYTHONVERSION=3
 
 # gather options
-while getopts “hp:x:v” OPTION
+while getopts “hp:x:vV:” OPTION
 do
      case $OPTION in
          h)
@@ -41,12 +43,25 @@ do
          v)
              VERBOSE=1
              ;;
+         V)
+             PYTHONVERSION=$OPTARG
+             ;;
          ?)
              usage
              exit
              ;;
      esac
 done
+
+# Python version
+if [ "$PYTHONVERSION" = 3 ]
+then
+     python_compiler=python3
+     f2py_compiler=f2py3
+else
+     python_compiler=python2
+     f2py_compiler=f2py
+fi
 
 # if prefix is not set, set it to /usr/local
 if [[ -z $PREFIX ]]
@@ -67,17 +82,17 @@ then
 fi
 
 # install LIBBBG
-python2.7 setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
+$python_compiler setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
 
 # the shared libraries
-export LIBBBG_LIB=$PREFIX/lib/python2.7/site-packages/
+export LIBBBG_LIB=$PREFIX/lib/python3.6/site-packages/
 
 # install solpol and solpol2 extensions - requires mathematical libraries linked to NumPy!
 cd libbbg/qm
-f2py2.7 -c --quiet --link-lapack_opt --link-blas_opt -m make_points  make_points.f
-f2py2.7 -c --quiet --link-lapack_opt --link-blas_opt -m wfn  wfn.f
-mv -v $PWD/make_points.so $LIBBBG_LIB/libbbg/qm/make_points.so
-mv -v $PWD/wfn.so $LIBBBG_LIB/libbbg/qm/wfn.so
+$f2py_compiler -c --quiet --link-lapack_opt --link-blas_opt -m make_points  make_points.f
+$f2py_compiler -c --quiet --link-lapack_opt --link-blas_opt -m wfn  wfn.f
+mv -v $PWD/make_points.*.so $LIBBBG_LIB/libbbg/qm/make_points.so
+mv -v $PWD/wfn.*.so $LIBBBG_LIB/libbbg/qm/wfn.so
 cd ../..
 
 echo --- INFO ---------------------------------------------------------------------------
