--- a/install
+++ b/install
@@ -1,38 +1,42 @@
 #!/bin/bash
-#python setup.py install --prefix=$prefix
 
 usage()
 {
 cat << EOF
 LIBBBG installation script
 
-usage: $0 options
+usage: $0 options args
 
 OPTIONS:
-   -h      Show this message
-   -p      prefix (default \usr\local)
-   -x      exec_prefix (default \usr\local)
-   -v      Verbose
-   -V      Python version (2 or 3; default 3)
+   -h         Show this message
+   -u         User mode              default: False
+   -p [path]  prefix                 default /usr/local
+   -x [path]  exec_prefix            default /usr/local
+   -l [path]  local Python lib       default lib/python3.6/dist-packages
+   -v [ver]   Python version         2 or 3; default 3
 
 NOTES:
-   if only prefix chosen, the exec_prefix will be the same as prefix
+   * if only prefix chosen, the exec_prefix will be the same as prefix
 EOF
 }
 
 # installation variables
-PREFIX=
+PREFIX=/usr/local
 EXEC_PREFIX=
-VERBOSE=
+LIB_PYTHON=lib/python3.6/dist-packages
 PYTHONVERSION=3
+USERMODE=0
 
 # gather options
-while getopts “hp:x:vV:” OPTION
+while getopts “hup:x:l:V:” OPTION
 do
      case $OPTION in
          h)
              usage
              exit 1
+             ;;
+         u)
+             USERMODE=1
              ;;
          p)
              PREFIX=$OPTARG
@@ -40,10 +44,10 @@ do
          x)
              EXEC_PREFIX=$OPTARG
              ;;
-         v)
-             VERBOSE=1
+         l)
+             LIB_PYTHON=$OPTARG
              ;;
-         V)
+         v)
              PYTHONVERSION=$OPTARG
              ;;
          ?)
@@ -63,29 +67,22 @@ else
      f2py_compiler=f2py
 fi
 
-# if prefix is not set, set it to /usr/local
-if [[ -z $PREFIX ]]
-then
-     EXEC_PREFIX=/usr/local
-fi
-
 # if exec-prefix is not set, set it up the same as prefix
 if [[ -z $EXEC_PREFIX ]]
 then
      EXEC_PREFIX=$PREFIX
 fi
 
-if [[ -z $PREFIX ]] || [[ -z $EXEC_PREFIX ]]
+# install LIBBBG
+if [ "$USERMODE" = 1 ]
 then
-     echo Nothing to do. Run with -h option
-     exit 1
+   $python_compiler setup.py install --user
+else 
+   $python_compiler setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
 fi
 
-# install LIBBBG
-$python_compiler setup.py install --prefix=$PREFIX --exec-prefix=$EXEC_PREFIX
-
 # the shared libraries
-export LIBBBG_LIB=$PREFIX/lib/python3.6/site-packages/
+export LIBBBG_LIB=$PREFIX/${LIB_PYTHON}
 
 # install solpol and solpol2 extensions - requires mathematical libraries linked to NumPy!
 cd libbbg/qm
@@ -95,15 +92,32 @@ mv -v $PWD/make_points.*.so $LIBBBG_LIB/libbbg/qm/make_points.so
 mv -v $PWD/wfn.*.so $LIBBBG_LIB/libbbg/qm/wfn.so
 cd ../..
 
-echo --- INFO ---------------------------------------------------------------------------
 echo
-echo Modify your $HOME/.bashrc script adding the following line:
+echo 
+echo " --- LAST INSTALLATION STEP REQUIRED ------------------------------------------------- "
+echo "                                                                                       "
+echo " Before installation is fully complete, update your bashrc script:                     "
+echo "                                                                                       "
+echo "     1. In $HOME/.bashrc script add the following line:                                "
+echo "                                                                                       "
+echo "        export PYTHONPATH=$LIBBBG_LIB:\$PYTHONPATH                                     "
+echo "        (if it is not in your PYTHONPATH yet)                                          "
+echo "                                                                                       "
+echo "     2. Next, set the LIBBBG_IMPORT_MATPLOTLIB environmental variable                  "
+echo "        to either 1 or 0. Setting it to 0 might be required if your terminal           "
+echo "        sessions do not allow for the graphical display \(e.g., on some                "
+echo "        computer clusters\).                                                           "
+echo "                                                                                       " 
+echo "        export LIBBBG_IMPORT_MATPLOTLIB=1  # or 0                                      "
+echo "                                                                                       "
+echo "     3. Finally, type in the terminal                                                  "
+echo "                                                                                       "
+echo "        source $HOME/.bashrc                                                           "
+echo "                                                                                       " 
+echo " Test your installation by typing:                                                     "
+echo "                                                                                       "
+echo "        python -c 'import libbbg'                                                      "
+echo "                                                                                       "
+echo " ------------------------------------------------------------------------------------- "
+echo 
 echo
-echo export PYTHONPATH=$LIBBBG_LIB:'$PYTHONPATH'
-echo
-echo Then, type in the terminal
-echo
-echo source $HOME/.bashrc
-echo
-echo ------------------------------------------------------------------------------------
-
